# frb_baryon_connor2024

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: frbsample_connor0924.csv  nondsa_frbs_nov2023.csv
publicdata/: README
src/: crossmatch_halo.py  frbdm_mcmc.py  frbdm_mcmc_jit.py  mcquinn_mcmc.py  plotting.py  proc_TNG.py  reader.py  runjack.py
